styles/default.css
/* ... */
#top .item.last {
    margin-right: 0;
}
#top .dropdown-button {
    cursor: pointer;
    font-size: 14px;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
}
#top .dropdown-button:after {
    content: '\25BE';
    font-size: 16px;
    color: #666;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
}
#top .logo {
    background: url(/images/logo/logo_64x64.png) no-repeat center center;
    background-size: 32px 32px;
    width: 32px;
    height: 32px;
    cursor: pointer;
}
#top .profile {
    padding-left: 27px;
    background-size: 24px 24px;
    background-repeat: no-repeat;
    background-position: left center;
    line-height: 28px;
}
#top .profile img {
    display: inline-block;
}
#top .search {
    padding-right: 34px; /* button width */
    position: relative;
    border-radius: 24px;
    background-color: #FFF;
}

/* Hide top menu optinos until settings and user has loaded */
#top .right {
    opacity: 0;
    -moz-transition: opacity 0.5s;
    -webkit-transition: opacity 0.5s;
    -o-transition: opacity 0.5s;
}
body.loaded #top .right {
    opacity: 1;
}

input[type=search]::-webkit-search-decoration,
input[type=search]::-webkit-search-results-button,
input[type=search]::-webkit-search-results-decoration {
  display: none;
}
#top .search input[type=search] {
    -webkit-appearance: none;
    -moz-box-sizing: content-box;
    -webkit-box-sizing: content-box;
    box-sizing: content-box;
    height: 26px;
    width: 200px;
    padding: 2px 4px 2px 10px;
    border-radius: 24px 0 0 24px;
    border: 1px solid #8B9594;
    border-right: none;
    outline: none;
    background-color: transparent;
}
#top .search button {
    position: absolute;
    right: 0;
    top: 0px;
    min-width: 35px;
    width: 35px;
    height: 32px;
    padding:0;
    border-radius: 0 24px 24px 0;
    border-left: none;
    background: transparent;
}
#top .search button:after {
    content: 'ô';
    font-family: YoutifyRegular;
    color: #bbb;
    font-size: 36px;
    line-height: 20px;
    font-weight: normal;
    position: absolute;
    top: -4px;
    left: 6px;
}
#settings .puffs .chrome-webstore {
    padding-left: 20px;
    background: url(/images/chrome_16.png) no-repeat left center;
}
#top .activities {
    position: relative;
}
#top .activities .title {
    font-family: YoutifyRegular;
    font-size: 32px;
    line-height: 20px;
    position: absolute;
    top: -6px;
    left: -17px;
    color: #333;
}
#top .activities.has-new .title {
    color: purple;
}
#top .settings .counter {
    background: rgba(0, 124, 137, 0.4);
    color: white;
    border-radius: 4px;
    padding: 0 4px;
    font-size: 10px;
    font-weight: bold;
    vertical-align: top;
}
#top .menu .login-link {
    cursor: pointer;
    line-height: 20px;
}
#top .notifications {
    position: absolute;
    z-index: 25;
    right: 10px;
    top: 10px;
    min-width: 200px;
}
#top .notifications li {
    position: relative;
    width: 228px;
    max-width: 228px;
    min-height: 32px;
    padding: 20px 20px 20px 52px;
    margin-bottom: 15px;
    border-radius: 10px;
    background: rgba(0,0,0,0.8);
    background-image: url('/images/logo/logo_32x32.png');
    background-repeat: no-repeat;
    background-position: 10px 20px;
    color: white;
    font-weight: bold;
    -moz-transition: all 1s ease-in-out;
    -webkit-transition: all 1s ease-in-out;
    -o-transition: all 1s ease-in-out;
    -ms-transition: all 1s ease-in-out;
    transition: all 1s ease-in-out;
}
#top .notifications li:last-of-type {
    margin-bottom: 0px;
}
#top .notifications li.hidden {
    opacity: 0;
}
#top .notifications li .close {
    display: none;
    position: absolute;
    top: 3px;
    right: 10px;
    cursor: pointer;
}
#top .notifications li:hover .close {
    display: block;
}

/** LEFT
 ****************************************************************************/

.left-wrapper {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    position: absolute;
    top: 0;
    z-index: 5;
    width: 320px;
    height: 100%;
    padding: 50px 0 70px 0; /* #top, 0, #bottom, 0 */
}
#left {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    width: 320px;
    height: 100%;
    padding-bottom: 200px; /* #.players.height */
}
#left .menu {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    height: 100%;
    max-width: 100%;
    font-size: 14px;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    padding: 10px 5px 5px 5px;
    overflow: hidden;
    overflow-y: auto;
}
#left .menu li:hover {
    color: #000;
}
#left .menu li.selected:hover {
    color: #FFF;
}
#left .menu .external-user-subscriptions img,
#left .menu .playlists li.subscription .owner {
    position: absolute;
    left: 5px;
    top: 10px;
    width: 16px;
    height: 16px;
}
#left .menu .home, 
#left .menu .queue,
#left .menu .playlists li ,
#left .menu .external-user-subscriptions li,
#left .menu .playlists li.subscription {
    cursor: pointer;
    padding: 8px 8px 8px 25px;
    position: relative;
    overflow: hidden;
}
#left .menu .title {
    display: block;
    overflow: hidden;
}
#left .menu .playing .title {
    max-width: 235px;
}
#left .menu .home:before {
    content: 'ï';
    font-family: YoutifyRegular;
    font-size: 32px;
    line-height: 20px;
    color: #000;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    position: absolute;
    top: -2px;
    left: 4px;
}
#left .menu .queue:before {
    content: 'j';
    font-family: YoutifyRegular;
    font-size: 32px;
    line-height: 20px;
    color: #000;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    position: absolute;
    top: -1px;
    left: 4px;
}
#left .menu .group .loading-animation {
    text-align: left;
    padding: 5px;
}
/* ... */

